Add document creation
