# src/modules/documents/infra/http/routers/documents.routes.ts
@@ -1,9 +1,15 @@
 import { Router } from 'express';
+import multer from 'multer';
+import uploadConfig from '@config/upload';
 import ensureAuthentication from '@modules/users/infra/http/middlewares/ensureAuthentication';
 import DocumentsController from '../controllers/DocumentsController';
+
+const upload = multer({ dest: uploadConfig.tmpFolder });
 
 const router = Router();
 const documentsController = new DocumentsController();
 
 router.use(ensureAuthentication);
-router.post('/', documentsController.create);
+router.post('/', upload.single('file'), documentsController.create);
+
+export default router;
